--- a/weatherapp/templates/cardsWithTransition.html
+++ b/weatherapp/templates/cardsWithTransition.html
@@ -11,8 +11,9 @@
     }
   
     .daily {
-      min-width: 100vw;
-      overflow: visible;
+      margin: 0 auto;
+      left:10px;
+      right:10px;
     }
   
     .card-title {
@@ -29,7 +30,7 @@
       font-family: "Lato", sans-serif;
     }
   </style>
-  <div class="slideshow-container">  
+  <div class="slideshow-container" style="height:fit-content;height:fit-content; margin:0 auto; justify-content: center; left:10px;right:10px; ">  
     <div class="mySlides animated fadeIn">
       <div class="col-sm text-center">
         <div class="card">
