connected sun and centered on temp button

--- a/weatherapp/templates/sunny.html
+++ b/weatherapp/templates/sunny.html
@@ -6,7 +6,7 @@
 <div class="svg-contain">
 	<svg version="1.1" class="clear-sky-svg" xmlns="http://www.w3.org/2000/svg"
 		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 72.3 72.6"
-		preserveAspectRatio="X200Y200 meet style=" enable-background:new 0 0 512 512;" xml:space="preserve">
+		preserveAspectRatio="X200Y200 meet" enable-background:new 0 0 512 512;" xml:space="preserve">
 		<g>
 			<path id="sunn" class="sun" fill="currentColor"
 			fill="#FFF" d="M50.8,25.7c0,7.9-6.4,14.4-14.4,14.4s-14.4-6.4-14.4-14.4s6.4-14.4,14.4-14.4S50.8,17.8,50.8,25.7z" />
