--- a/weatherapp/templates/weatherapp.html
+++ b/weatherapp/templates/weatherapp.html
@@ -88,8 +88,10 @@
   </div>
 </div>
 <div class="weather-box" style="padding:0px;">
-    <button class="weather-button btn purple-gradient btn-rounded btn-hover weather animated zoomIn current-weather-image" style="position: relative; padding:0px;"></button>
-</div>
+    <button class="weather-button btn purple-gradient btn-rounded btn-hover weather animated zoomIn current-weather-image" style="position: relative; justify-content:center;">
+    icon
+    </button>
+  </div>
 <div style="display:flex; justify-content: center; align-items: center; width:102%;">
 <div class="weather-aspect">
   <div class="aspect-data col-sm text-center">
