adjusted button height

--- a/weatherapp/templates/weatherapp.html
+++ b/weatherapp/templates/weatherapp.html
@@ -88,8 +88,7 @@
   </div>
 </div>
 <div class="weather-box" style="padding:0px;">
-    <button class="weather-button btn purple-gradient btn-rounded btn-hover weather animated zoomIn current-weather-image" style="position: relative; justify-content:center;">
-    icon
+    <button class="weather-button btn purple-gradient btn-rounded btn-hover weather animated zoomIn current-weather-image" style="position: relative; justify-content:center; height:20%">
     </button>
   </div>
 <div style="display:flex; justify-content: center; align-items: center; width:102%;">
